# ledfanatic

./: .gitignore  CLAUDE.md  review-codex.txt
pi/: pyproject.toml
pi/app/: hardware_constants.py  main.py
pi/app/api/: deps.py  schemas.py  server.py
pi/app/audio/: adapter.py  analyzer.py
pi/app/config/: installation.py  pixel_map.py
pi/app/core/: brightness.py  compositor.py  renderer.py  state.py
pi/app/diagnostics/: patterns.py
pi/app/effects/: audio_reactive.py  base.py  catalog.py  fireworks.py  fluids.py  fractals.py  games.py  generative.py  imported_sim_helpers.py  media_playback.py  negative_space.py  registry.py  scrolltext.py  simulation.py  switcher.py  tetris.py  (+1 more)
pi/config/: effects.yaml  hardware.yaml  layout.yaml  pixel_map.yaml  system.yaml  system.yaml.example
pi/scripts/: deploy.sh  generate_teensy_config.py  setup.sh
pi/systemd/: ledfanatic.service  pillar.service
pi/tests/: test_api_contract.py  test_audio_adapter.py  test_audio_analyzer.py  test_auth.py  test_brightness.py  test_brightness_cal.py  test_buffer_perf.py  test_compositor.py  test_effect_catalog.py  test_engine.py  test_error_isolation.py  test_generative_palette.py  test_imported_animations.py  test_layout_compiler.py  test_layout_integration.py  test_layout_packer.py  test_layout_schema.py  test_mapping.py  test_matrix_rain_perf.py  test_media.py  test_migrations.py  test_packer.py  test_pixel_map.py  test_preview_isolation.py  test_protocol.py  test_sound_variants.py  test_state.py  test_strip_mapping.py  test_width_policy.py
pi/tools/: bench_effects.py
(+97 files in other folders)
